[package]
name = "mypub-decryptor"
version = "0.1.0"
authors = ["Yepeng Ding <yepengding@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/yepengding/MyPubDecryptor"
readme = "README.md"

[dependencies]
tokio = { version = "1.10.1", features = ["full"] }
k256 = { version = "0.9.6", features = ["ecdsa-core"] }
hex-literal = "0.3.3"
age = "0.6.0"
secrecy = "0.7"
clap = "3.0.0-beta.4"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
